<resources>
    <string name="app_name">Vmail</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login">LOGIN</string>
    <string name="Create_Acc">Create Account</string>
    <string name="no_acc_yet">No account yet? Create one</string>
    <string name="another_sign_up">- or Sign up Via -</string>
    <string name="arm">Arm</string>
    <string name="shoulder">Shoulder</string>
    <string name="newUser" translatable="false">Not a Member yet? Sign Up here.</string>
    <string name="fullName" translatable="false">Full Name</string>
    <string name="req_not_complete" translatable="true">Requirements not complete</string>
    <string name="chest">Chest</string>
    <string name="core">Core</string>
    <string name="Note_Added_Successfull">Note Added Successfully</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already a member? Login.</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="submit" translatable="false">SUBMIT</string>
    <string name="back">BACK</string>

    <!--Strings related to TTS and STT-->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="wrong_email_password">Wrong Email or Password</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="passwords_donot_match">Passwords do not matched</string>
    <string name="password_error">Password must be at least 6 characters</string>


    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="years">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>

    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="secretQuestions">
        <item>What is the name of the city you born?</item>
        <item>What is the name of the street you lived on as a child?</item>
        <item>What is the name of your first pet?</item>
        <item>What is the name of your favorite subject?</item>
        <item>What is the name of your favorite movie?</item>
        <item>What is the name of your favorite book?</item>
        <item>What is the name of your favorite song?</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="check_internet_connection">Check your network connection</string>

    <string-array name="titles">
        <item>Receive your Seat</item>
        <item>Receive your Seat</item>
        <item>Receive your Seat</item>
        <item>Receive your Seat</item>
        <item>Receive your Seat</item>
        <item>Receive your Seat</item>
        <item>Receive your Seat</item>
    </string-array>
    <string-array name="company">
        <item>Udacity</item>
        <item>Udacity</item>
        <item>Udacity</item>
        <item>Udacity</item>
        <item>Udacity</item>
        <item>Udacity</item>
        <item>Udacity</item>
    </string-array>
    <string-array name="firstline">
        <item>Launch Your First Android app with our TOP course at 82% OFF (24 hrs ONLY) HERE </item>
        <item>Launch Your First Android app with our TOP course at 82% OFF (24 hrs ONLY) HERE </item>
        <item>Launch Your First Android app with our TOP course at 82% OFF (24 hrs ONLY) HERE  </item>
        <item>Launch Your First Android app with our TOP course at 82% OFF (24 hrs ONLY) HERE </item>
        <item>Launch Your First Android app with our TOP course at 82% OFF (24 hrs ONLY) HERE </item>
        <item>Launch Your First Android app with our TOP course at 82% OFF (24 hrs ONLY) HERE </item>
        <item>Launch Your First Android app with our TOP course at 82% OFF (24 hrs ONLY) HERE </item>
    </string-array>
    <string-array name="date">
        <item> 30 dec </item>
        <item> 30 dec </item>
        <item> 30 dec </item>
        <item> 30 dec </item>
        <item> 30 dec </item>
        <item> 30 dec </item>
        <item> 30 dec </item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
