<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey"
    android:contentDescription="signing up step 1 page"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="5dp"
    tools:context="com.example.abanoub.voicebasedemailsystem.SignUp1Activity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/emaillogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/edit_text"
            android:contentDescription="enter your full name here"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/layeru"
                android:tint="@color/colorsmallimage" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@drawable/oval_shape"
                android:hint="@string/fullName"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:background="@drawable/edit_text"
            android:contentDescription="enter your username here"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/layerem"
                android:tint="@color/colorsmallimage" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="#00000000"
                android:hint="Username"
                android:inputType="text"
                android:letterSpacing="0.1"
                android:maxLines="1"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="16dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/domain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:enabled="false"
                    android:hint="\@vmail.com"
                    android:inputType="textEmailAddress"
                    android:letterSpacing="0.1"
                    android:maxLines="1"
                    android:textColorHint="#000"
                    android:textSize="16dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:background="@drawable/edit_text"
            android:contentDescription="enter your password here"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/layer0"
                android:tint="@color/colorsmallimage" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="#00000000"
                android:hint="Password"
                android:inputType="textPassword"
                android:letterSpacing="0.1"
                android:maxLines="1"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:background="@drawable/edit_text"
            android:contentDescription="enter your password here again"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/layer0"
                android:tint="@color/colorsmallimage" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="#00000000"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:letterSpacing="0.1"
                android:maxLines="1"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="16dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/linear1"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2."
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:contentDescription="secret question"
            android:text="Secret Question"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/secretQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/oval_shape"
                android:contentDescription="choose your secret question"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="What is the name of the city you born?"
                android:textColor="#000"
                android:textSize="16dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:contentDescription="secret answer"
            android:text="Secret Answer"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/secretAnswerED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_shape"
                android:contentDescription="enter your secret answer"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="16dp"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:weightSum="4">

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/gradian_1"
            android:contentDescription="sign up button"
            android:letterSpacing="0.2"
            android:padding="12dp"
            android:text="@string/signUp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_link"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:layout_weight=".4"
        android:contentDescription="@string/already_user"
        android:gravity="center"
        android:text="@string/already_user"
        android:textColor="#d9e5f3"
        android:textSize="16sp" />
</LinearLayout>


